# vifei-suite-public

./: .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLANS.md  PLAN_FOR_ADVANCED_OPTIMIZATIONS_ROUND_1__CODEX.md  PROPOSED_CODE_FILE_REORGANIZATION_PLAN.md  README.md  SECURITY.md  SUPPORT.md
.beads/: issues.jsonl
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  determinism_regression.yml
.github/workflows/: ci.yml
crates/panopticon-core/: Cargo.toml
crates/panopticon-export/: Cargo.toml
crates/panopticon-export/src/: bundle.rs  discover.rs  lib.rs  scanner.rs  secret_scan.rs
crates/panopticon-export/tests/: export_integration.rs
crates/panopticon-import/: Cargo.toml
crates/panopticon-tour/: Cargo.toml
crates/panopticon-tour/benches/: tour_pipeline.rs
crates/panopticon-tour/src/: artifacts.rs  lib.rs  metrics.rs
crates/panopticon-tour/tests/: large_stress_fixture.rs  tour_invariants.rs
crates/panopticon-tui/: Cargo.toml
crates/panopticon-tui/src/: cli_contract.rs  cli_handlers.rs  cli_normalize.rs  forensic_lens.rs  incident_lens.rs  lib.rs  main.rs  truth_hud.rs  visual_tone.rs
crates/panopticon-tui/tests/: cli_robot_mode_contract.rs  modality_validation.rs  truth_hud_snapshot.rs  tui_e2e_interactive.rs
crates/vifei-core/: Cargo.toml
crates/vifei-export/: Cargo.toml
crates/vifei-export/src/: bundle.rs  discover.rs  lib.rs  scanner.rs  secret_scan.rs
crates/vifei-export/tests/: export_integration.rs
crates/vifei-import/: Cargo.toml
crates/vifei-tour/: Cargo.toml
crates/vifei-tour/benches/: tour_pipeline.rs
crates/vifei-tour/src/: artifacts.rs  lib.rs  metrics.rs
crates/vifei-tour/tests/: large_stress_fixture.rs  tour_invariants.rs
crates/vifei-tui/: Cargo.toml
crates/vifei-tui/src/: cli_contract.rs  cli_handlers.rs  cli_normalize.rs  forensic_lens.rs  incident_lens.rs  lib.rs  main.rs  truth_hud.rs  visual_tone.rs
crates/vifei-tui/tests/: cli_robot_mode_contract.rs  modality_validation.rs  truth_hud_snapshot.rs  tui_e2e_interactive.rs
docs/: ARTIFACT_SERIALIZATION_POLICY.md  BACKPRESSURE_POLICY.md  CAPACITY_ENVELOPE.md  CC_GUIDES_PROMPT.md  COMMUNITY_TRIAGE_PLAYBOOK.md  CORE_TRUTH_PATH_SPLIT_PREFLIGHT.md  DEMO_SCRIPT.md  DEPENDENCY_LICENSE_AUDIT.md  DOCS_AUDIT_MATRIX_2026-02-18.md  IMMEDIATE_FUTURE_SHOWCASE_CHECKLIST.md  LAUNCH_COMMS_PACK.md  POST_LAUNCH_TRIAGE_RUBRIC.md  PUBLIC_REPO_SETTINGS_CHECKLIST.md  README_ASSET_PLAYBOOK.md  README_BEAUTIFY_TOOLS.md  README_LAUNCH_PLAN.md  README_QA_REPORT.md  README_VERIFICATION.md  RELEASE_PACKAGING_CHECKLIST.md  RELEASE_READINESS_2026-02-18.md  RELEASE_TRUST_VERIFICATION.md  RESEARCH_REFERENCE.md  RISK_REGISTER.md  SHOWCASE_UX_PROFILE_RESEARCH_2026-02-18.md  UX_MODALITY_MATRIX.md  UX_SCOPE.md  UX_TEST_PLAN.md  UX_VISUAL_TONE.md
docs/demo/: cloudforge_workflow_demo.md
docs/guides/: ARCHITECTURE.md  CLI_DESIGN.md  RUST_ERROR_HANDLING.md  RUST_SERDE_DETERMINISM.md  SECURITY_REDACTION.md  TESTING_DETERMINISM.md  TUI_RATATUI.md  WORKSPACE_HYGIENE.md
docs/product/: business-model-v1.md  feature-priority-decision-2026-02-19.md  founder-one-pager.md  go-to-market-checklist.md  messaging.md  positioning.md  roadmap-30-60-90.md  showcase-three-demo-plan.md
docs/showcase/: adapter-human-cli-track.md  adapter-refusal-safety-track.md  adapter-robot-json-track.md  index.md
docs/testing/: ADAPTER_FIXTURE_TEMPLATE.md  BEAD_CLOSURE_EVIDENCE_POLICY.md  COMPETITOR_BAKEOFF.md  DEFER_REGISTER.md  FASTLANE.md  FULL_CONFIDENCE.md  a2-closeout-report-2026-02-17.md  a3-closeout-report-2026-02-17.md  bead-closure-evidence-exemptions-v0.1.json  bead-risk-parity-audit-2026-02-18-reconciled.json  bead-risk-parity-audit-2026-02-18-reconciled.md  bead-risk-parity-audit-2026-02-18.json  bead-risk-parity-audit-2026-02-18.md  bead-risk-parity-reconciliation-2026-02-18.md  cli-masking-audit-2026-02-18.md  coverage-matrix-v0.1.md  defer-register-v0.1.json  perf-a4-2-fractional-timestamp-parser-2026-02-17.md  perf-a4-typed-cassette-parser-2026-02-17.md  perf-artifact-schema-v1.md  perf-baseline-a2-2026-02-17.md  perf-baseline-lock-v1.json  perf-c1-inplace-reducer-a2-2026-02-17.md  perf-c2-streaming-parse-proof-a3-2026-02-17.md  perf-c3-decision-gate-a3-2026-02-17.md  perf-hotspots-a2-2026-02-17.md  perf-hotspots-a3-post-c2-2026-02-17.md  perf-opportunity-matrix-a2-2026-02-17.md  (+7 more)
fixtures/: README.md  anthropic-messages-small.jsonl  cohere-translate-small.jsonl  metals-commercial-workflow-refusal.jsonl  metals-commercial-workflow.jsonl  openai-responses-noisy.jsonl  openai-responses-small.jsonl  small-session.jsonl
scripts/: capture_showcase_cast.sh  demo_quickcheck.sh  refresh_readme_assets.sh  release_artifacts.sh  verify_release_artifacts.sh
scripts/e2e/: README.md  (+3 more)
tools/vifei-ftui/: Cargo.toml
tools/vifei-ftui/src/: main.rs
(+87 files in other folders)
