[package]
name = "panopticon-export"
version.workspace = true
edition.workspace = true

[dependencies]
panopticon-core = { path = "../panopticon-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
regex = "1"
once_cell = "1"
tar = "0.4"
zstd = "0.13"

[dev-dependencies]
tempfile = "3"
