[package]
name = "panopticon-tui"
version.workspace = true
edition.workspace = true

[[bin]]
name = "panopticon"
path = "src/main.rs"

[dependencies]
panopticon-core = { path = "../panopticon-core" }
panopticon-export = { path = "../panopticon-export" }
panopticon-tour = { path = "../panopticon-tour" }
ratatui = "0.29"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
